# Langgraph-Agentic-AI

./: .gitignore  README.md  main.py  pyproject.toml
src/: 1_text_processor.ipynb  2_ai_content_summarizer.ipynb  3_job_application_screener.ipynb  4_news_aggregator.ipynb  5_smart-email-responder.ipynb  RAG.py  email_setup.py  utils.py
