[project]
name = "langgraph-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.5",
    "chromadb>=1.3.7",
    "ddgs>=9.9.3",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.5",
    "huggingface-hub==0.33.5",
    "langchain==1.1.2",
    "langchain-aws>=1.1.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core>=1.1.1",
    "langchain-huggingface==1.1.0",
    "langchain-mistralai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph==1.0.4",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]
